code/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    COMMENTM

Grammar

Rule 0     S' -> prog
Rule 1     prog -> block
Rule 2     block -> declarations program_body
Rule 3     declarations -> declaration SEMICOLON declarations
Rule 4     declarations -> <empty>
Rule 5     declaration -> var_declaration
Rule 6     declaration -> fun_declaration
Rule 7     var_declaration -> VAR basic_var_declaration
Rule 8     basic_var_declaration -> identifier COLON type
Rule 9     fun_declaration -> FUN identifier param_list COLON type CLPAR fun_block CRPAR
Rule 10    fun_block -> declarations fun_body
Rule 11    param_list -> LPAR parameters RPAR
Rule 12    parameters -> parameters1
Rule 13    parameters -> <empty>
Rule 14    parameters1 -> parameters1 COMMA basic_var_declaration
Rule 15    parameters1 -> basic_var_declaration
Rule 16    identifier -> ID
Rule 17    type -> INT
Rule 18    type -> BOOL
Rule 19    program_body -> BEGIN prog_stmts END
Rule 20    fun_body -> BEGIN prog_stmts RETURN expr SEMICOLON END
Rule 21    fun_body -> prog_stmts RETURN expr SEMICOLON
Rule 22    prog_stmts -> prog_stmt SEMICOLON prog_stmts
Rule 23    prog_stmts -> <empty>
Rule 24    prog_stmt -> IF expr THEN prog_stmt ELSE prog_stmt
Rule 25    prog_stmt -> WHILE expr DO prog_stmt
Rule 26    prog_stmt -> READ ID
Rule 27    prog_stmt -> ID ASSIGN expr
Rule 28    prog_stmt -> PRINT expr
Rule 29    prog_stmt -> CLPAR block CRPAR
Rule 30    expr -> expr OR bint_term
Rule 31    expr -> bint_term
Rule 32    bint_term -> bint_term AND bint_factor
Rule 33    bint_term -> bint_factor
Rule 34    bint_factor -> NOT bint_factor
Rule 35    bint_factor -> int_expr compare_op int_expr
Rule 36    bint_factor -> int_expr
Rule 37    compare_op -> EQUAL
Rule 38    compare_op -> LT
Rule 39    compare_op -> GT
Rule 40    compare_op -> LE
Rule 41    compare_op -> GE
Rule 42    int_expr -> int_expr addop int_term
Rule 43    int_expr -> int_term
Rule 44    addop -> ADD
Rule 45    addop -> SUB
Rule 46    int_term -> int_term mulop int_factor
Rule 47    int_term -> int_factor
Rule 48    mulop -> MUL
Rule 49    mulop -> DIV
Rule 50    int_factor -> LPAR expr RPAR
Rule 51    int_factor -> ID argument_list
Rule 52    int_factor -> NUM
Rule 53    int_factor -> BVAL
Rule 54    int_factor -> SUB int_factor
Rule 55    argument_list -> LPAR arguments RPAR
Rule 56    argument_list -> <empty>
Rule 57    arguments -> arguments1
Rule 58    arguments -> <empty>
Rule 59    arguments1 -> arguments1 COMMA expr
Rule 60    arguments1 -> expr

Terminals, with rules where they appear

ADD                  : 44
AND                  : 32
ASSIGN               : 27
BEGIN                : 19 20
BOOL                 : 18
BVAL                 : 53
CLPAR                : 9 29
COLON                : 8 9
COMMA                : 14 59
COMMENT              : 
COMMENTM             : 
CRPAR                : 9 29
DIV                  : 49
DO                   : 25
ELSE                 : 24
END                  : 19 20
EQUAL                : 37
FUN                  : 9
GE                   : 41
GT                   : 39
ID                   : 16 26 27 51
IF                   : 24
INT                  : 17
LE                   : 40
LPAR                 : 11 50 55
LT                   : 38
MUL                  : 48
NOT                  : 34
NUM                  : 52
OR                   : 30
PRINT                : 28
READ                 : 26
RETURN               : 20 21
RPAR                 : 11 50 55
SEMICOLON            : 3 20 21 22
SUB                  : 45 54
THEN                 : 24
VAR                  : 7
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

addop                : 42
argument_list        : 51
arguments            : 55
arguments1           : 57 59
basic_var_declaration : 7 14 15
bint_factor          : 32 33 34
bint_term            : 30 31 32
block                : 1 29
compare_op           : 35
declaration          : 3
declarations         : 2 3 10
expr                 : 20 21 24 25 27 28 30 50 59 60
fun_block            : 9
fun_body             : 10
fun_declaration      : 6
identifier           : 8 9
int_expr             : 35 35 36 42
int_factor           : 46 47 54
int_term             : 42 43 46
mulop                : 46
param_list           : 9
parameters           : 11
parameters1          : 12 14
prog                 : 0
prog_stmt            : 22 24 24 25
prog_stmts           : 19 20 21 22
program_body         : 2
type                 : 8 9
var_declaration      : 5

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . block
    (2) block -> . declarations program_body
    (3) declarations -> . declaration SEMICOLON declarations
    (4) declarations -> .
    (5) declaration -> . var_declaration
    (6) declaration -> . fun_declaration
    (7) var_declaration -> . VAR basic_var_declaration
    (9) fun_declaration -> . FUN identifier param_list COLON type CLPAR fun_block CRPAR

    BEGIN           reduce using rule 4 (declarations -> .)
    VAR             shift and go to state 7
    FUN             shift and go to state 5

    block                          shift and go to state 1
    declaration                    shift and go to state 2
    prog                           shift and go to state 3
    fun_declaration                shift and go to state 4
    var_declaration                shift and go to state 6
    declarations                   shift and go to state 8

state 1

    (1) prog -> block .

    $end            reduce using rule 1 (prog -> block .)


state 2

    (3) declarations -> declaration . SEMICOLON declarations

    SEMICOLON       shift and go to state 9


state 3

    (0) S' -> prog .



state 4

    (6) declaration -> fun_declaration .

    SEMICOLON       reduce using rule 6 (declaration -> fun_declaration .)


state 5

    (9) fun_declaration -> FUN . identifier param_list COLON type CLPAR fun_block CRPAR
    (16) identifier -> . ID

    ID              shift and go to state 11

    identifier                     shift and go to state 10

state 6

    (5) declaration -> var_declaration .

    SEMICOLON       reduce using rule 5 (declaration -> var_declaration .)


state 7

    (7) var_declaration -> VAR . basic_var_declaration
    (8) basic_var_declaration -> . identifier COLON type
    (16) identifier -> . ID

    ID              shift and go to state 11

    identifier                     shift and go to state 12
    basic_var_declaration          shift and go to state 13

state 8

    (2) block -> declarations . program_body
    (19) program_body -> . BEGIN prog_stmts END

    BEGIN           shift and go to state 14

    program_body                   shift and go to state 15

state 9

    (3) declarations -> declaration SEMICOLON . declarations
    (3) declarations -> . declaration SEMICOLON declarations
    (4) declarations -> .
    (5) declaration -> . var_declaration
    (6) declaration -> . fun_declaration
    (7) var_declaration -> . VAR basic_var_declaration
    (9) fun_declaration -> . FUN identifier param_list COLON type CLPAR fun_block CRPAR

    BEGIN           reduce using rule 4 (declarations -> .)
    IF              reduce using rule 4 (declarations -> .)
    WHILE           reduce using rule 4 (declarations -> .)
    READ            reduce using rule 4 (declarations -> .)
    ID              reduce using rule 4 (declarations -> .)
    PRINT           reduce using rule 4 (declarations -> .)
    CLPAR           reduce using rule 4 (declarations -> .)
    RETURN          reduce using rule 4 (declarations -> .)
    VAR             shift and go to state 7
    FUN             shift and go to state 5

    fun_declaration                shift and go to state 4
    var_declaration                shift and go to state 6
    declaration                    shift and go to state 2
    declarations                   shift and go to state 16

state 10

    (9) fun_declaration -> FUN identifier . param_list COLON type CLPAR fun_block CRPAR
    (11) param_list -> . LPAR parameters RPAR

    LPAR            shift and go to state 17

    param_list                     shift and go to state 18

state 11

    (16) identifier -> ID .

    COLON           reduce using rule 16 (identifier -> ID .)
    LPAR            reduce using rule 16 (identifier -> ID .)


state 12

    (8) basic_var_declaration -> identifier . COLON type

    COLON           shift and go to state 19


state 13

    (7) var_declaration -> VAR basic_var_declaration .

    SEMICOLON       reduce using rule 7 (var_declaration -> VAR basic_var_declaration .)


state 14

    (19) program_body -> BEGIN . prog_stmts END
    (22) prog_stmts -> . prog_stmt SEMICOLON prog_stmts
    (23) prog_stmts -> .
    (24) prog_stmt -> . IF expr THEN prog_stmt ELSE prog_stmt
    (25) prog_stmt -> . WHILE expr DO prog_stmt
    (26) prog_stmt -> . READ ID
    (27) prog_stmt -> . ID ASSIGN expr
    (28) prog_stmt -> . PRINT expr
    (29) prog_stmt -> . CLPAR block CRPAR

    END             reduce using rule 23 (prog_stmts -> .)
    IF              shift and go to state 20
    WHILE           shift and go to state 25
    READ            shift and go to state 27
    ID              shift and go to state 26
    PRINT           shift and go to state 23
    CLPAR           shift and go to state 22

    prog_stmt                      shift and go to state 24
    prog_stmts                     shift and go to state 21

state 15

    (2) block -> declarations program_body .

    $end            reduce using rule 2 (block -> declarations program_body .)
    CRPAR           reduce using rule 2 (block -> declarations program_body .)


state 16

    (3) declarations -> declaration SEMICOLON declarations .

    BEGIN           reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    IF              reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    WHILE           reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    READ            reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    ID              reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    PRINT           reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    CLPAR           reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)
    RETURN          reduce using rule 3 (declarations -> declaration SEMICOLON declarations .)


state 17

    (11) param_list -> LPAR . parameters RPAR
    (12) parameters -> . parameters1
    (13) parameters -> .
    (14) parameters1 -> . parameters1 COMMA basic_var_declaration
    (15) parameters1 -> . basic_var_declaration
    (8) basic_var_declaration -> . identifier COLON type
    (16) identifier -> . ID

    RPAR            reduce using rule 13 (parameters -> .)
    ID              shift and go to state 11

    parameters                     shift and go to state 29
    identifier                     shift and go to state 12
    basic_var_declaration          shift and go to state 28
    parameters1                    shift and go to state 30

state 18

    (9) fun_declaration -> FUN identifier param_list . COLON type CLPAR fun_block CRPAR

    COLON           shift and go to state 31


state 19

    (8) basic_var_declaration -> identifier COLON . type
    (17) type -> . INT
    (18) type -> . BOOL

    INT             shift and go to state 33
    BOOL            shift and go to state 32

    type                           shift and go to state 34

state 20

    (24) prog_stmt -> IF . expr THEN prog_stmt ELSE prog_stmt
    (30) expr -> . expr OR bint_term
    (31) expr -> . bint_term
    (32) bint_term -> . bint_term AND bint_factor
    (33) bint_term -> . bint_factor
    (34) bint_factor -> . NOT bint_factor
    (35) bint_factor -> . int_expr compare_op int_expr
    (36) bint_factor -> . int_expr
    (42) int_expr -> . int_expr addop int_term
    (43) int_expr -> . int_term
    (46) int_term -> . int_term mulop int_factor
    (47) int_term -> . int_factor
    (50) int_factor -> . LPAR expr RPAR
    (51) int_factor -> . ID argument_list
    (52) int_factor -> . NUM
    (53) int_factor -> . BVAL
    (54) int_factor -> . SUB int_factor

    NOT             shift and go to state 37
    LPAR            shift and go to state 38
    ID              shift and go to state 46
    NUM             shift and go to state 35
    BVAL            shift and go to state 41
    SUB             shift and go to state 40

    bint_term                      shift and go to state 44
    bint_factor                    shift and go to state 45
    int_factor                     shift and go to state 43
    int_term                       shift and go to state 39
    expr                           shift and go to state 42
    int_expr                       shift and go to state 36

state 21

    (19) program_body -> BEGIN prog_stmts . END

    END             shift and go to state 47


state 22

    (29) prog_stmt -> CLPAR . block CRPAR
    (2) block -> . declarations program_body
    (3) declarations -> . declaration SEMICOLON declarations
    (4) declarations -> .
    (5) declaration -> . var_declaration
    (6) declaration -> . fun_declaration
    (7) var_declaration -> . VAR basic_var_declaration
    (9) fun_declaration -> . FUN identifier param_list COLON type CLPAR fun_block CRPAR

    BEGIN           reduce using rule 4 (declarations -> .)
    VAR             shift and go to state 7
    FUN             shift and go to state 5

    fun_declaration                shift and go to state 4
    var_declaration                shift and go to state 6
    declaration                    shift and go to state 2
    block                          shift and go to state 48
    declarations                   shift and go to state 8

state 23

    (28) prog_stmt -> PRINT . expr
    (30) expr -> . expr OR bint_term
    (31) expr -> . bint_term
    (32) bint_term -> . bint_term AND bint_factor
    (33) bint_term -> . bint_factor
    (34) bint_factor -> . NOT bint_factor
    (35) bint_factor -> . int_expr compare_op int_expr
    (36) bint_factor -> . int_expr
    (42) int_expr -> . int_expr addop int_term
    (43) int_expr -> . int_term
    (46) int_term -> . int_term mulop int_factor
    (47) int_term -> . int_factor
    (50) int_factor -> . LPAR expr RPAR
    (51) int_factor -> . ID argument_list
    (52) int_factor -> . NUM
    (53) int_factor -> . BVAL
    (54) int_factor -> . SUB int_factor

    NOT             shift and go to state 37
    LPAR            shift and go to state 38
    ID              shift and go to state 46
    NUM             shift and go to state 35
    BVAL            shift and go to state 41
    SUB             shift and go to state 40

    bint_term                      shift and go to state 44
    int_expr                       shift and go to state 36
    bint_factor                    shift and go to state 45
    int_factor                     shift and go to state 43
    expr                           shift and go to state 49
    int_term                       shift and go to state 39

state 24

    (22) prog_stmts -> prog_stmt . SEMICOLON prog_stmts

    SEMICOLON       shift and go to state 50


state 25

    (25) prog_stmt -> WHILE . expr DO prog_stmt
    (30) expr -> . expr OR bint_term
    (31) expr -> . bint_term
    (32) bint_term -> . bint_term AND bint_factor
    (33) bint_term -> . bint_factor
    (34) bint_factor -> . NOT bint_factor
    (35) bint_factor -> . int_expr compare_op int_expr
    (36) bint_factor -> . int_expr
    (42) int_expr -> . int_expr addop int_term
    (43) int_expr -> . int_term
    (46) int_term -> . int_term mulop int_factor
    (47) int_term -> . int_factor
    (50) int_factor -> . LPAR expr RPAR
    (51) int_factor -> . ID argument_list
    (52) int_factor -> . NUM
    (53) int_factor -> . BVAL
    (54) int_factor -> . SUB int_factor

    NOT             shift and go to state 37
    LPAR            shift and go to state 38
    ID              shift and go to state 46
    NUM             shift and go to state 35
    BVAL            shift and go to state 41
    SUB             shift and go to state 40

    bint_term                      shift and go to state 44
    bint_factor                    shift and go to state 45
    int_factor                     shift and go to state 43
    int_term                       shift and go to state 39
    expr                           shift and go to state 51
    int_expr                       shift and go to state 36

state 26

    (27) prog_stmt -> ID . ASSIGN expr

    ASSIGN          shift and go to state 52


state 27

    (26) prog_stmt -> READ . ID

    ID              shift and go to state 53


state 28

    (15) parameters1 -> basic_var_declaration .

    COMMA           reduce using rule 15 (parameters1 -> basic_var_declaration .)
    RPAR            reduce using rule 15 (parameters1 -> basic_var_declaration .)


state 29

    (11) param_list -> LPAR parameters . RPAR

    RPAR            shift and go to state 54


state 30

    (12) parameters -> parameters1 .
    (14) parameters1 -> parameters1 . COMMA basic_var_declaration

    RPAR            reduce using rule 12 (parameters -> parameters1 .)
    COMMA           shift and go to state 55


state 31

    (9) fun_declaration -> FUN identifier param_list COLON . type CLPAR fun_block CRPAR
    (17) type -> . INT
    (18) type -> . BOOL

    INT             shift and go to state 33
    BOOL            shift and go to state 32

    type                           shift and go to state 56

state 32

    (18) type -> BOOL .

    CLPAR           reduce using rule 18 (type -> BOOL .)
    SEMICOLON       reduce using rule 18 (type -> BOOL .)
    COMMA           reduce using rule 18 (type -> BOOL .)
    RPAR            reduce using rule 18 (type -> BOOL .)


state 33

    (17) type -> INT .

    CLPAR           reduce using rule 17 (type -> INT .)
    SEMICOLON       reduce using rule 17 (type -> INT .)
    COMMA           reduce using rule 17 (type -> INT .)
    RPAR            reduce using rule 17 (type -> INT .)


state 34

    (8) basic_var_declaration -> identifier COLON type .

    SEMICOLON       reduce using rule 8 (basic_var_declaration -> identifier COLON type .)
    COMMA           reduce using rule 8 (basic_var_declaration -> identifier COLON type .)
    RPAR            reduce using rule 8 (basic_var_declaration -> identifier COLON type .)


state 35

    (52) int_factor -> NUM .

    MUL             reduce using rule 52 (int_factor -> NUM .)
    DIV             reduce using rule 52 (int_factor -> NUM .)
    EQUAL           reduce using rule 52 (int_factor -> NUM .)
    LT              reduce using rule 52 (int_factor -> NUM .)
    GT              reduce using rule 52 (int_factor -> NUM .)
    LE              reduce using rule 52 (int_factor -> NUM .)
    GE              reduce using rule 52 (int_factor -> NUM .)
    ADD             reduce using rule 52 (int_factor -> NUM .)
    SUB             reduce using rule 52 (int_factor -> NUM .)
    AND             reduce using rule 52 (int_factor -> NUM .)
    SEMICOLON       reduce using rule 52 (int_factor -> NUM .)
    OR              reduce using rule 52 (int_factor -> NUM .)
    THEN            reduce using rule 52 (int_factor -> NUM .)
    ELSE            reduce using rule 52 (int_factor -> NUM .)
    DO              reduce using rule 52 (int_factor -> NUM .)
    RPAR            reduce using rule 52 (int_factor -> NUM .)
    COMMA           reduce using rule 52 (int_factor -> NUM .)


state 36

    (35) bint_factor -> int_expr . compare_op int_expr
    (36) bint_factor -> int_expr .
    (42) int_expr -> int_expr . addop int_term
    (37) compare_op -> . EQUAL
    (38) compare_op -> . LT
    (39) compare_op -> . GT
    (40) compare_op -> . LE
    (41) compare_op -> . GE
    (44) addop -> . ADD
    (45) addop -> . SUB

    AND             reduce using rule 36 (bint_factor -> int_expr .)
    OR              reduce using rule 36 (bint_factor -> int_expr .)
    COMMA           reduce using rule 36 (bint_factor -> int_expr .)
    RPAR            reduce using rule 36 (bint_factor -> int_expr .)
    DO              reduce using rule 36 (bint_factor -> int_expr .)
    SEMICOLON       reduce using rule 36 (bint_factor -> int_expr .)
    ELSE            reduce using rule 36 (bint_factor -> int_expr .)
    THEN            reduce using rule 36 (bint_factor -> int_expr .)
    EQUAL           shift and go to state 63
    LT              shift and go to state 59
    GT              shift and go to state 65
    LE              shift and go to state 61
    GE              shift and go to state 57
    ADD             shift and go to state 58
    SUB             shift and go to state 62

    addop                          shift and go to state 64
    compare_op                     shift and go to state 60

state 37

    (34) bint_factor -> NOT . bint_factor
    (34) bint_factor -> . NOT bint_factor
    (35) bint_factor -> . int_expr compare_op int_expr
    (36) bint_factor -> . int_expr
    (42) int_expr -> . int_expr addop int_term
    (43) int_expr -> . int_term
    (46) int_term -> . int_term mulop int_factor
    (47) int_term -> . int_factor
    (50) int_factor -> . LPAR expr RPAR
    (51) int_factor -> . ID argument_list
    (52) int_factor -> . NUM
    (53) int_factor -> . BVAL
    (54) int_factor -> . SUB int_factor

    NOT             shift and go to state 37
    LPAR            shift and go to state 38
    ID              shift and go to state 46
    NUM             shift and go to state 35
    BVAL            shift and go to state 41
    SUB             shift and go to state 40

    int_expr                       shift and go to state 36
    int_term                       shift and go to state 39
    bint_factor                    shift and go to state 66
    int_factor                     shift and go to state 43

state 38

    (50) int_factor -> LPAR . expr RPAR
    (30) expr -> . expr OR bint_term
    (31) expr -> . bint_term
    (32) bint_term -> . bint_term AND bint_factor
    (33) bint_term -> . bint_factor
    (34) bint_factor -> . NOT bint_factor
    (35) bint_factor -> . int_expr compare_op int_expr
    (36) bint_factor -> . int_expr
    (42) int_expr -> . int_expr addop int_term
    (43) int_expr -> . int_term
    (46) int_term -> . int_term mulop int_factor
    (47) int_term -> . int_factor
    (50) int_factor -> . LPAR expr RPAR
    (51) int_factor -> . ID argument_list
    (52) int_factor -> . NUM
    (53) int_factor -> . BVAL
    (54) int_factor -> . SUB int_factor

    NOT             shift and go to state 37
    LPAR            shift and go to state 38
    ID              shift and go to state 46
    NUM             shift and go to state 35
    BVAL            shift and go to state 41
    SUB             shift and go to state 40

    bint_term                      shift and go to state 44
    int_expr                       shift and go to state 36
    bint_factor                    shift and go to state 45
    int_factor                     shift and go to state 43
    expr                           shift and go to state 67
    int_term                       shift and go to state 39

state 39

    (43) int_expr -> int_term .
    (46) int_term -> int_term . mulop int_factor
    (48) mulop -> . MUL
    (49) mulop -> . DIV

    EQUAL           reduce using rule 43 (int_expr -> int_term .)
    LT              reduce using rule 43 (int_expr -> int_term .)
    GT              reduce using rule 43 (int_expr -> int_term .)
    LE              reduce using rule 43 (int_expr -> int_term .)
    GE              reduce using rule 43 (int_expr -> int_term .)
    ADD             reduce using rule 43 (int_expr -> int_term .)
    SUB             reduce using rule 43 (int_expr -> int_term .)
    AND             reduce using rule 43 (int_expr -> int_term .)
    OR              reduce using rule 43 (int_expr -> int_term .)
    SEMICOLON       reduce using rule 43 (int_expr -> int_term .)
    ELSE            reduce using rule 43 (int_expr -> int_term .)
    THEN            reduce using rule 43 (int_expr -> int_term .)
    DO              reduce using rule 43 (int_expr -> int_term .)
    RPAR            reduce using rule 43 (int_expr -> int_term .)
    COMMA           reduce using rule 43 (int_expr -> int_term .)
    MUL             shift and go to state 70
    DIV             shift and go to state 68

    mulop                          shift and go to state 69

state 40

    (54) int_factor -> SUB . int_factor
    (50) int_factor -> . LPAR expr RPAR
    (51) int_factor -> . ID argument_list
    (52) int_factor -> . NUM
    (53) int_factor -> . BVAL
    (54) int_factor -> . SUB int_factor

    LPAR            shift and go to state 38
    ID              shift and go to state 46
    NUM             shift and go to state 35
    BVAL            shift and go to state 41
    SUB             shift and go to state 40

    int_factor                     shift and go to state 71

state 41

    (53) int_factor -> BVAL .

    MUL             reduce using rule 53 (int_factor -> BVAL .)
    DIV             reduce using rule 53 (int_factor -> BVAL .)
    EQUAL           reduce using rule 53 (int_factor -> BVAL .)
    LT              reduce using rule 53 (int_factor -> BVAL .)
    GT              reduce using rule 53 (int_factor -> BVAL .)
    LE              reduce using rule 53 (int_factor -> BVAL .)
    GE              reduce using rule 53 (int_factor -> BVAL .)
    ADD             reduce using rule 53 (int_factor -> BVAL .)
    SUB             reduce using rule 53 (int_factor -> BVAL .)
    AND             reduce using rule 53 (int_factor -> BVAL .)
    SEMICOLON       reduce using rule 53 (int_factor -> BVAL .)
    OR              reduce using rule 53 (int_factor -> BVAL .)
    THEN            reduce using rule 53 (int_factor -> BVAL .)
    ELSE            reduce using rule 53 (int_factor -> BVAL .)
    DO              reduce using rule 53 (int_factor -> BVAL .)
    RPAR            reduce using rule 53 (int_factor -> BVAL .)
    COMMA           reduce using rule 53 (int_factor -> BVAL .)


state 42

    (24) prog_stmt -> IF expr . THEN prog_stmt ELSE prog_stmt
    (30) expr -> expr . OR bint_term

    THEN            shift and go to state 73
    OR              shift and go to state 72


state 43

    (47) int_term -> int_factor .
